Central Sentry buildout
=======================


1.1 (unreleased)
----------------

- Add postgresql support.
  [maurits]

- Fresh zc.buildout and friends.
  [maurits


1.0 (2014-01-31)
----------------

- Moved to bitbucket.
  [maurits]

- Initial release.
  [vincent]