@@ -1,9 +1,8 @@
-from settings import *
 DATABASES = {
     'default': {'ENGINE': 'django.db.backends.postgresql_psycopg2',
                 'NAME': 'sentry',
                 'USER': 'sentry',
-                'PASSWORD': '123sentry',
+                'PASSWORD': 'secret',
                 'HOST': '127.0.0.1',
                 'PORT': ''}
     }
